CRUD COMPLETO DE DEPARTAMENTO, CIUDAD, ESTADO

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -54,6 +54,9 @@
 							<a class="dropdown-item" th:href="@{/color/All/}">Color</a> <a
 								class="dropdown-item" th:href="@{/claseEstado/All/}">Clase Estado</a> <a
 								class="dropdown-item" th:href="@{/usuario/All/}">Usuario</a>
+								 <a	class="dropdown-item" th:href="@{/departamento/All/}">Departamento</a>
+								 <a	class="dropdown-item" th:href="@{/ciudad/All/}">Ciudad</a>
+								 <a	class="dropdown-item" th:href="@{/estado/All/}">Estado</a>
 						</div></li>
 
 				</ul>
